NTR: add missing subscription cancel in store-api
